--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -5,9 +5,17 @@
     "HeroSubTitle":"Благодійний фонд «Перемоги та Відновлення»",
     "HeroProjectsText":"поточних",
     "HeroProjectsText1":"проектів",
-    "WorkingProcessTitle": "Робочий процес",
+
+    
     "WorkingProcessSubTitleMob": "Додаткові деталі розробки обговорюються індивідуально",
     "WorkingProcessSubTitleLaptop": "Додаткові деталі розробки обговорюються в індивідуальному порядку",
+    
+    "AboutSectionTitle": "Про Фонд*",
+    "AboutSectionTitleText":"Благодійний Фонд",
+    "AboutSectionTitleText1":"«Перемоги та Відновлення»",
+    "AboutSectionText": "– це неприбуткова організація, мета та ціль котрої полягає у відновленні України та міці її державності. У сприянні перемозі українського народу та ефективному, якісному й надважливому забезпеченні комфортних умов для всіх та кожного зокрема.",
+    "AboutSectionText1":"Основний напрямок",
+    "AboutSectionText2":"діяльності благодійної організації - це, перш за все, психосоціальна підтримка та культурно-просвітницька діяльність для всіх, хто відчуває в цьому потребу й зацікавленість.",
 
     "ProjectsSectionTitle": "Проєкти",
     "NewsSectionTitle": "Новини",
@@ -71,6 +79,7 @@
     "Donate": "Підтримати",
     "Details": "Детальніше",
     "ContactUs": "Зв’яжись з нами",
+    "ToPartners":"Стати партнером",
 
     "HomeTeamBtn": "Про Команду",
     "HomeProjectsBtn": "До портфоліо",
