--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -13,25 +13,35 @@
     "AboutSectionTitle": "Про Фонд*",
     "AboutSectionTitleText":"Благодійний Фонд",
     "AboutSectionTitleText1":"«Перемоги та Відновлення»",
-    "AboutSectionText": "– це неприбуткова організація, мета та ціль котрої полягає у відновленні України та міці її державності. У сприянні перемозі українського народу та ефективному, якісному й надважливому забезпеченні комфортних умов для всіх та кожного зокрема.",
+    "AboutSectionText": " – це неприбуткова організація, мета та ціль котрої полягає у відновленні України та міці її державності. У сприянні перемозі українського народу та ефективному, якісному й надважливому забезпеченні комфортних умов для всіх та кожного зокрема.",
     "AboutSectionText1":"Основний напрямок",
     "AboutSectionText2":"діяльності благодійної організації - це, перш за все, психосоціальна підтримка та культурно-просвітницька діяльність для всіх, хто відчуває в цьому потребу й зацікавленість.",
 
     "ProjectsSectionTitle": "Проєкти",
-    "NewsSectionTitle": "Новини",
+    "NewsSectionTitle": "Новини"
+  },
+  
+  "MissionPage": {
+    "Title": "Місія та статут",
+    "SubTitle": "Фонд",
+    "SubTitle1":"«Перемоги та Відновлення»",
+    "SubTitle2":" – це про майбутнє. Щасливе, комфортне та справедливе.",
+    "Text1":"Благодійний Фонд",
+    "Text2":"«Перемоги та Відновлення»",
+    "Text3":" — це динамічна неприбуткова організація, яка прагне відновити Україну та зміцнити її державність.",
+    "Text4":"Ми допомагаємо українському народу",
+    "Text5":" досягти перемоги та створюємо комфортні умови для всіх. Наша головна діяльність зосереджена на психосоціальній підтримці та культурно-просвітницькій роботі, відкритій для всіх, хто відчуває в цьому потребу.",
+    "Text6":"Ми працюємо з людьми",
+    "Text7":", постраждалими від воєнних дій, та тими, хто потребує соціальної адаптації, приділяючи особливу увагу студентам і молоді, адже вважаємо психологічну підтримку надважливою для майбутнього країни.",
+    "Text8":"Наші проєкти ",
+    "Text9":"охоплюють наукові та освітні заходи",
+    "Text10":", популяризацію здоров’я, саморозвитку та самореалізації через соціальні мережі та публічні виступи. Фонд створює платформи для нетворкінгу, активно інвестує у перемогу країни, організовуючи збори, пожертви та волонтерство, щоб допомогти державі у всіх необхідних напрямках."
+  },
 
-    "OurProjectsSubTitle": "Роботи",
-    "OurServicesTitle": "Послуги",
-    "OurServicesSubTitle": "Від малого до великого сайту",
-    "FaqSubTitle": "Ви можете знайти своє питання тут",
-    "OrderSectionTitleMob": "Поговоримо про",
-    "OrderSectionTitleTab": "Поговоримо про",
-    "OrderSectionSubTitle": "Ваш новий сайт!"
-  },
   "TeamPage": {
-    "Title": "Команда",
-    "SubTitle": "давайте познайомимося з тими, хто працює для Вас"
+    "Title": "Команда"
   },
+
   "OurProjectsPage": {
     "Title": "Наші роботи",
     "NavLinkText": "На сторінку з усіма проєктами",
@@ -60,11 +70,7 @@
     "SubTitle3": "пропозицію для Вашого бізнесу:",
     "BackToServicesBtn": "До усіх послуг"
   },
-  "BlogPage": {
-    "GenSubTitle": "Блог",
-    "SubTitle": "тут Ви можете прочитати корисні статті",
-    "NoArticles": "Статей не знайдено!"
-  },
+  
   "BlogIdPage": {
     "SubTitle": "Також вам буде цікаво:",
     "NotFound": "Блог не знайдено",
@@ -80,7 +86,8 @@
     "Contacts":"Контакти",
     "AdressCity":"м.Київ",
     "AdressStreet":"вул. Княжий Затон",
-    "WorkDays":"Пн-Пт"
+    "WorkDays":"Пн-Пт",
+    "MenuNav":"Меню"
   },
 
   "Buttons": {
@@ -88,6 +95,7 @@
     "Details": "Детальніше",
     "ContactUs": "Зв’яжись з нами",
     "ToPartners":"Стати партнером",
+    "ToStatute":"Ознайомитись зі Статутом",
 
     "HomeTeamBtn": "Про Команду",
     "HomeProjectsBtn": "До портфоліо",
