--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -61,10 +61,14 @@
 
   "ContactsPage": {
     "Title": "Контакти",
-    "Phone": "НОМЕР ТЕЛЕФОНУ",
-    "Email": "ПОШТА",
-    "Social": "СОЦІАЛЬНІ МЕРЕЖІ"
+    "PrivacyPolicy":"Перед здійсненням дзвінка або зверненням на електронну адресу, будь ласка, ознайомтесь з політикою конфіденційності! Наш договір публічної оферти та політика конфіденційності знаходяться за посиланням:",
+    "Text": "` Для зв'язку з нами зателефонуйте за телефоном, або напишіть нам на електронну адресу, і ми зв'яжемось з вами якнайшвидше!`"
   },
+
+  "NewsPage":{
+    "Title":"Новини"
+  },
+
   "ServicesPage": {
     "Title": "Послуги",
     "SubTitle1": "обирайте",
