--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -107,6 +107,7 @@
     "ContactUs": "Зв’яжись з нами",
     "ToPartners":"Стати партнером",
     "ToStatute":"Ознайомитись зі Статутом",
+    "SendRequest":"Надіслати заявку",
 
     "HomeTeamBtn": "Про Команду",
     "HomeProjectsBtn": "До портфоліо",
@@ -124,12 +125,15 @@
     "CloseFilterBtn": "Сховати",
     "Submit": "Пiдтвердити"
   },
+
   "Form": {
-    "Title": "Заповніть форму і ми зателефонуємо Вам",
-    "TitleMob": "Ми зателефонуємо Вам",
     "Name": "Ім’я",
     "Phone": "Номер телефону",
+    "Email":"Адреса електронної пошти",
+    "Subject":"Тема",
     "TextArea": "Коротко опишіть Ваше побажання",
+    "FeedBackFormText":"Оберіть мессенджер для зв’язку",
+
     "FormSubmitedMsg": "Вітаємо! Ваше повідомлення відправлено менеджеру.",
     "fieldRequiredMsg": "Заповніть це поле",
     "errorShortName": "Ім’я має бути довшим",
