--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -102,13 +102,13 @@
     "PhoneOrganization":"Номер телефона організації",
     "Email":"Адреса електронної пошти",
     "Adress":"Адреса організації",
-    "Role":"Your role in the organization",
+    "Role":"Ваша роль в організації",
     "Subject":"Тема",
     "TextArea": "Коротко опишіть Ваше побажання",
     "FormText":"Оберіть мессенджер для зв’язку",
 
     "FormSubmitedMsg": "Вітаємо! Ваше повідомлення відправлено менеджеру.",
-    "fieldRequiredMsg": "Заповніть це поле",
+    "FieldRequiredMsg": "Заповніть це поле",
     "errorShortName": "Ім’я має бути довшим",
     "errorLongName": "Ім’я має бути коротшим",
     "errorNumberOfObject": "Такого номеру немає",
